+ ConfigPage shows scrolbars when it doesnt fit the screen + ConfigPage has a minimum width (to stop it from getting unreadable / unusable when the window isnt wide enough)

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -441,8 +441,13 @@ body {
 .config-page {
   width: 100%;
   height: 100%;
-  padding: 1em;
+  overflow: auto;
+}
+.config-page__inner {
+  padding: 1em 10px;
+  min-width: 40em;
   text-align: center;
+  overflow: visible;
 }
 .config-page__title {
   font-size: 2.5em;
